[package]
name = "rusty-romans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
leptos = { version = "0.4.6", features = ["csr"] }

# [[bin]]
# name = "cli"
# path = "src/bin/cli.rs"
